--- a/app/src/main/res/drawable/bg_lock_audio_record.xml
+++ b/app/src/main/res/drawable/bg_lock_audio_record.xml
@@ -2,7 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="@dimen/conversation_fab_size" />
+    <corners
+        android:topLeftRadius="@dimen/conversation_fab_size"
+        android:topRightRadius="@dimen/conversation_fab_size" />
     <solid android:color="@color/white" />
 
 </shape>
