--- a/app/src/main/res/layout/custom_input_panel_widget.xml
+++ b/app/src/main/res/layout/custom_input_panel_widget.xml
@@ -7,199 +7,238 @@
 
     </data>
 
-    <ViewSwitcher
-        android:id="@+id/viewSwitcher"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_input_panel"
         android:clipChildren="false"
-        android:clipToPadding="false">
+        android:clipToPadding="false"
+        android:orientation="horizontal">
 
-        <!-- INPUT PANEL NORMAL -->
         <LinearLayout
-            android:id="@+id/container_input_panel"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/bg_input_panel"
             android:clipChildren="false"
             android:clipToPadding="false"
-            android:orientation="vertical"
-            android:paddingStart="@dimen/small_padding"
-            android:paddingEnd="@dimen/small_padding">
+            android:orientation="vertical">
 
             <com.naposystems.napoleonchat.ui.custom.inputPanel.InputPanelQuote
                 android:id="@+id/layout_quote"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/small_margin"
                 android:layout_marginTop="@dimen/small_margin"
+                android:layout_marginEnd="@dimen/small_margin"
                 android:visibility="gone"
                 app:isCancelable="true"
                 app:isFromInputPanel="true"
-                tools:visibility="gone" />
+                tools:visibility="visible" />
 
-            <FrameLayout
+            <RelativeLayout
+                android:id="@+id/viewSwitcher"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/conversation_fab_size"
                 android:clipChildren="false"
-                android:clipToPadding="false">
+                android:clipToPadding="false"
+                android:paddingStart="@dimen/small_padding"
+                android:paddingEnd="@dimen/small_padding">
 
+                <!-- INPUT PANEL NORMAL -->
                 <LinearLayout
-                    android:id="@+id/container_input_options"
+                    android:id="@+id/container_input_panel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@id/microphone_recorder_view"
                     android:clipChildren="false"
                     android:clipToPadding="false"
-                    android:gravity="center_vertical"
-                    android:minHeight="@dimen/conversation_fab_size"
-                    android:orientation="horizontal">
-
-                    <ImageButton
-                        android:id="@+id/imageButton_emoji"
-                        style="@style/OptionEndIcon"
-                        android:src="@drawable/ic_insert_emoticon_black" />
-
-                    <androidx.emoji.widget.EmojiAppCompatEditText
-                        android:id="@+id/textInputEditText_input"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/small_margin"
-                        android:layout_marginEnd="@dimen/small_padding"
-                        android:layout_weight="1"
-                        android:background="?attr/attrBackgroundSectionColor"
-                        android:hint="@string/text_write_message"
-                        android:imeOptions="actionGo"
-                        android:inputType="textCapSentences|textMultiLine"
-                        android:maxLength="1000"
-                        android:maxLines="6"
-                        android:paddingTop="4dp"
-                        android:paddingBottom="4dp"
-                        android:scrollbarThumbVertical="@color/colorSecondaryDark"
-                        android:scrollbars="vertical"
-                        android:singleLine="false"
-                        android:textColor="?attr/attrTextColorSecondaryTextColor"
-                        android:textColorHint="?attr/attrTextColorHintConversationInputPanel"
-                        android:textSize="18sp" />
+                    android:orientation="vertical">
 
                     <FrameLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:clipChildren="false"
                         android:clipToPadding="false">
 
                         <LinearLayout
-                            android:id="@+id/container_action_input"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="end"
-                            android:animateLayoutChanges="true"
+                            android:id="@+id/container_input_options"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:clipChildren="false"
                             android:clipToPadding="false"
+                            android:gravity="center_vertical"
+                            android:minHeight="@dimen/conversation_fab_size"
                             android:orientation="horizontal">
 
                             <ImageButton
-                                android:id="@+id/imageButton_attachment"
+                                android:id="@+id/imageButton_emoji"
                                 style="@style/OptionEndIcon"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginEnd="@dimen/normal_margin"
-                                android:src="@drawable/ic_attachment_black" />
+                                android:src="@drawable/ic_insert_emoticon_black" />
 
-                            <ImageButton
-                                android:id="@+id/imageButton_camera"
-                                style="@style/OptionEndIcon"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginEnd="@dimen/normal_margin"
-                                android:src="@drawable/ic_camera_primary" />
+                            <androidx.emoji.widget.EmojiAppCompatEditText
+                                android:id="@+id/textInputEditText_input"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/small_margin"
+                                android:layout_marginEnd="@dimen/small_padding"
+                                android:layout_weight="1"
+                                android:background="?attr/attrBackgroundSectionColor"
+                                android:hint="@string/text_write_message"
+                                android:imeOptions="actionGo"
+                                android:inputType="textCapSentences|textMultiLine"
+                                android:maxLength="1000"
+                                android:maxLines="6"
+                                android:paddingTop="4dp"
+                                android:paddingBottom="4dp"
+                                android:scrollbarThumbVertical="@color/colorSecondaryDark"
+                                android:scrollbars="vertical"
+                                android:singleLine="false"
+                                android:textColor="?attr/attrTextColorSecondaryTextColor"
+                                android:textColorHint="?attr/attrTextColorHintConversationInputPanel"
+                                android:textSize="18sp" />
 
-                            <com.naposystems.napoleonchat.ui.custom.microphoneRecorderView.MicrophoneRecorderView
-                                android:layout_width="24dp"
-                                android:layout_height="24dp"
-                                android:layout_gravity="center_vertical"
+                            <FrameLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
                                 android:clipChildren="false"
                                 android:clipToPadding="false">
 
-                                <include layout="@layout/custom_view_microphone_recorder" />
+                                <LinearLayout
+                                    android:id="@+id/container_action_input"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="end"
+                                    android:animateLayoutChanges="true"
+                                    android:clipChildren="false"
+                                    android:clipToPadding="false"
+                                    android:orientation="horizontal">
 
-                            </com.naposystems.napoleonchat.ui.custom.microphoneRecorderView.MicrophoneRecorderView>
+                                    <ImageButton
+                                        android:id="@+id/imageButton_attachment"
+                                        style="@style/OptionEndIcon"
+                                        android:layout_gravity="center_vertical"
+                                        android:src="@drawable/ic_attachment_black" />
+
+                                    <ImageButton
+                                        android:id="@+id/imageButton_camera"
+                                        style="@style/OptionEndIcon"
+                                        android:layout_gravity="center_vertical"
+                                        android:layout_marginStart="@dimen/normal_margin"
+                                        android:src="@drawable/ic_camera_primary" />
+
+                                </LinearLayout>
+                            </FrameLayout>
 
                         </LinearLayout>
                     </FrameLayout>
 
                 </LinearLayout>
-            </FrameLayout>
 
-        </LinearLayout>
+                <!-- RECORD TOGGLE -->
+                <com.naposystems.napoleonchat.ui.custom.microphoneRecorderView.MicrophoneRecorderView
+                    android:id="@+id/microphone_recorder_view"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="@dimen/normal_margin"
+                    android:clipChildren="false"
+                    android:clipToPadding="false"
+                    tools:visibility="visible" />
 
-        <!-- SLIDE TO CANCEL AUDIO -->
-        <LinearLayout
-            android:id="@+id/container_slide_to_cancel"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/imageView_mic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:tint="@color/red"
-                app:srcCompat="@drawable/ic_mic_black" />
-
-            <TextView
-                android:id="@+id/textView_time"
-                style="@style/BodyTextView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/small_margin"
-                android:layout_weight="1"
-                android:text="00:00"
-                tools:text="99:99" />
-
-            <ViewSwitcher
-                android:id="@+id/viewSwitcher_text"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="end">
-
+                <!-- SLIDE TO CANCEL AUDIO -->
                 <LinearLayout
-                    android:id="@+id/container_text_slide"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/container_slide_to_cancel"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone"
+                    tools:visibility="gone">
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/appCompatImageView"
-                        style="@style/OptionEndIcon"
-                        app:srcCompat="@drawable/ic_keyboard_arrow_left_black" />
+                        android:id="@+id/imageView_mic"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:tint="@color/red"
+                        app:srcCompat="@drawable/ic_mic_black" />
 
                     <TextView
-                        android:id="@+id/textView_slide_to_cancel"
-                        style="@style/SmallBodyTextView"
-                        android:layout_width="0dp"
+                        android:id="@+id/textView_time"
+                        style="@style/BodyTextView"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:paddingStart="0dp"
-                        android:paddingEnd="30dp"
-                        android:text="@string/text_slide_to_cancel" />
+                        android:layout_marginStart="@dimen/small_margin"
+                        android:text="00:00"
+                        tools:text="30:00" />
+
+                    <ViewSwitcher
+                        android:id="@+id/viewSwitcher_text"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end"
+                        android:layout_weight="1">
+
+                        <LinearLayout
+                            android:id="@+id/container_text_slide"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center_horizontal"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
+
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:id="@+id/appCompatImageView"
+                                style="@style/OptionEndIcon"
+                                app:srcCompat="@drawable/ic_keyboard_arrow_left_black" />
+
+                            <TextView
+                                android:id="@+id/textView_slide_to_cancel"
+                                style="@style/SmallBodyTextView"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:paddingStart="0dp"
+                                android:paddingEnd="30dp"
+                                android:text="@string/text_slide_to_cancel" />
+                        </LinearLayout>
+
+                        <TextView
+                            android:id="@+id/textView_cancel"
+                            style="@style/BodyTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="end"
+                            android:layout_marginEnd="@dimen/large_margin"
+                            android:gravity="center"
+                            android:paddingStart="@dimen/normal_padding"
+                            android:paddingEnd="@dimen/normal_padding"
+                            android:text="@string/text_cancel"
+                            android:textColor="@color/redIntense" />
+
+                    </ViewSwitcher>
+
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/textView_cancel"
-                    style="@style/BodyTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="end"
-                    android:layout_marginEnd="@dimen/large_margin"
-                    android:gravity="center"
-                    android:paddingStart="@dimen/normal_padding"
-                    android:paddingEnd="@dimen/normal_padding"
-                    android:text="@string/text_cancel"
-                    android:textColor="@color/redIntense" />
-
-            </ViewSwitcher>
+            </RelativeLayout>
 
         </LinearLayout>
 
-    </ViewSwitcher>
+        <ImageButton
+            android:id="@+id/imageButton_send"
+            android:layout_width="@dimen/conversation_fab_size"
+            android:layout_height="@dimen/conversation_fab_size"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="@dimen/x_small_margin"
+            android:background="@drawable/bg_button_send"
+            android:tint="@color/white"
+            android:visibility="gone"
+            app:srcCompat="@drawable/ic_send_black"
+            tools:visibility="visible" />
+
+    </LinearLayout>
 
 </layout>
