--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -49,6 +49,7 @@
     <dimen name="text_size_call_duration">14sp</dimen>
     <dimen name="text_size_calling">16sp</dimen>
     <dimen name="text_size_call_nickname">28sp</dimen>
+    <dimen name="recording_voice_lock_target">-100dp</dimen>
 
     <!-- BEGIN MATERIAL RIPPLE DIMENS -->
     <item name="low_ripple_pressed_alpha" format="float" type="dimen">0.12</item>
