--- a/app/src/main/res/layout/attachment_audio_fragment.xml
+++ b/app/src/main/res/layout/attachment_audio_fragment.xml
@@ -32,7 +32,7 @@
                     android:id="@+id/recyclerView_audios"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:clipToPadding="false"
+                    android:clipToPadding="true"
                     android:paddingBottom="56dp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:listitem="@layout/attachment_audio_item"/>
