-Arreglo de las diferentes vibraciones y sonidos. -Reemplazar dos botones en el invitar a amigo con las tiendas de Android e iOS Respectivas.

--- a/app/src/main/res/layout/custom_input_panel_widget.xml
+++ b/app/src/main/res/layout/custom_input_panel_widget.xml
@@ -237,7 +237,7 @@
             android:tint="@color/white"
             android:visibility="gone"
             app:srcCompat="@drawable/ic_send_black"
-            tools:visibility="gone" />
+            tools:visibility="visible" />
 
     </LinearLayout>
 
