--- a/app/src/main/res/values-it/general.xml
+++ b/app/src/main/res/values-it/general.xml
@@ -13,7 +13,8 @@
     <string name="label_edit_photo">Modifica foto</string>
     <string name="label_edit_cover">Modifica banner</string>
     <string name="text_edit">Modifica</string>
-    <string name="text_share">Quota</string>
+    <string name="text_share_android">Condividi con Android</string>
+    <string name="text_share_ios">Condividi con iOS</string>
     <string name="text_search">Cerca</string>
     <string name="text_add_contact">Aggiungi contatto</string>
     <string name="text_finish">Finalizza</string>
