--- a/app/src/main/res/layout/add_contact_friendship_request_received.xml
+++ b/app/src/main/res/layout/add_contact_friendship_request_received.xml
@@ -18,12 +18,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_home_item"
-        android:padding="@dimen/normal_padding">
+        android:paddingStart="@dimen/normal_padding"
+        android:paddingTop="@dimen/small_padding"
+        android:paddingEnd="@dimen/normal_padding"
+        android:paddingBottom="@dimen/small_padding">
 
         <ImageView
             android:id="@+id/imageView_user_image"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             app:avatar="@{friendshipRequest.contact}"
             android:background="@drawable/border_avatar_contact"
             app:layout_constraintBottom_toBottomOf="parent"
