--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -29,16 +29,14 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <!-- SUBSCRIPTION -->
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:id="@+id/container_subscription"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/redIntense"
-                android:backgroundTint="@color/redIntense"
+                android:orientation="vertical"
                 android:padding="@dimen/small_padding"
                 android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:visibility="visible">
 
@@ -51,13 +49,9 @@
                     android:layout_marginTop="@dimen/small_margin"
                     android:layout_marginBottom="@dimen/small_margin"
                     android:textColor="@color/white"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     tools:text="@string/text_subscription_expired" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
+            </LinearLayout>
 
             <!-- STATUS -->
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -110,12 +104,70 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/container_status">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView_chats"
+                <LinearLayout
+                    android:id="@+id/container_content_home"
+                    android:animateLayoutChanges="true"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/home_fragment_item" />
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:id="@+id/container_friend_request_received"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:visibility="gone"
+                        tools:visibility="visible">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:background="?attr/attrBackgroundSectionOtherColor">
+
+                            <TextView
+                                style="@style/TextViewListTitle"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="@string/text_friend_requests_received" />
+
+                            <com.google.android.material.button.MaterialButton
+                                android:id="@+id/button_show_all_friendship"
+                                style="@style/AppPrimaryButtonText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="?attr/attrTextColorSecondaryTextColor"
+                                android:text="@string/text_section_see_more"
+                                app:rippleColor="?attr/attrBackgroundSectionColor"/>
+
+                        </LinearLayout>
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recyclerView_friendship_request"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/attrBackgroundColorBackground"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:listitem="@layout/add_contact_item"
+                            tools:itemCount="3"/>
+
+                        <TextView
+                            style="@style/TextViewListTitle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/text_section_conversations" />
+
+                    </LinearLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerView_chats"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:listitem="@layout/home_fragment_item" />
+
+                </LinearLayout>
 
                 <com.naposystems.napoleonchat.ui.custom.emptyState.EmptyStateCustomView
                     android:id="@+id/empty_state"
