--- a/app/src/main/res/layout/custom_view_microphone_recorder.xml
+++ b/app/src/main/res/layout/custom_view_microphone_recorder.xml
@@ -66,6 +66,7 @@
             android:backgroundTint="@color/colorPrimary"
             android:clickable="false"
             android:padding="8dp"
+            android:elevation="4dp"
             android:translationX="15dp"
             android:translationY="12dp"
             android:visibility="gone"
