--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -104,70 +104,75 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/container_status">
 
-                <LinearLayout
+                <androidx.core.widget.NestedScrollView
                     android:id="@+id/container_content_home"
-                    android:animateLayoutChanges="true"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent">
 
                     <LinearLayout
-                        android:id="@+id/container_friend_request_received"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:visibility="gone"
-                        tools:visibility="visible">
+                        android:orientation="vertical">
 
                         <LinearLayout
+                            android:id="@+id/container_friend_request_received"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:background="?attr/attrBackgroundSectionOtherColor">
+                            android:orientation="vertical"
+                            android:visibility="gone"
+                            tools:visibility="visible">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:background="?attr/attrBackgroundSectionOtherColor">
+
+                                <TextView
+                                    style="@style/TextViewListTitle"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:text="@string/text_friend_requests_received" />
+
+                                <com.google.android.material.button.MaterialButton
+                                    android:id="@+id/button_show_all_friendship"
+                                    style="@style/AppPrimaryButtonText"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="?attr/attrTextColorSecondaryTextColor"
+                                    android:text="@string/text_section_see_more"
+                                    app:rippleColor="?attr/attrBackgroundSectionColor"/>
+
+                            </LinearLayout>
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/recyclerView_friendship_request"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="?attr/attrBackgroundColorBackground"
+                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                                tools:listitem="@layout/add_contact_item"
+                                tools:itemCount="3"/>
 
                             <TextView
                                 style="@style/TextViewListTitle"
-                                android:layout_width="0dp"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="@string/text_friend_requests_received" />
-
-                            <com.google.android.material.button.MaterialButton
-                                android:id="@+id/button_show_all_friendship"
-                                style="@style/AppPrimaryButtonText"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="?attr/attrTextColorSecondaryTextColor"
-                                android:text="@string/text_section_see_more"
-                                app:rippleColor="?attr/attrBackgroundSectionColor"/>
+                                android:text="@string/text_section_conversations" />
 
                         </LinearLayout>
 
                         <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/recyclerView_friendship_request"
+                            android:id="@+id/recyclerView_chats"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="?attr/attrBackgroundColorBackground"
+                            android:layout_height="match_parent"
                             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                            tools:listitem="@layout/add_contact_item"
-                            tools:itemCount="3"/>
-
-                        <TextView
-                            style="@style/TextViewListTitle"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/text_section_conversations" />
+                            tools:listitem="@layout/home_fragment_item" />
 
                     </LinearLayout>
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerView_chats"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        tools:listitem="@layout/home_fragment_item" />
-
-                </LinearLayout>
+                </androidx.core.widget.NestedScrollView>
 
                 <com.naposystems.napoleonchat.ui.custom.emptyState.EmptyStateCustomView
                     android:id="@+id/empty_state"
